--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,11 @@
 }
 }
 
-
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
 
 @media (max-width: 1120px) and (min-width: 768px) {
     #sidebar{
@@ -62,7 +66,20 @@
     margin-left:100px;
 }
 
-@media (min-width: 990px) {
+@media (min-width: 1375px) {
+    .thumbDiv {
+        height:375px;
+    }
+    #thumbnailsRow {
+        margin-left:200px;
+    }
+#cont2{
+    margin-left:auto;
+    margin-right:auto;
+}
+}
+
+@media (max-width: 1375px) {
     .thumbDiv {
         height:375px;
     }
